# lite-horse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
deploy/: cron.service  gateway.service
docs/: CLI.md  EMBEDDING.md  EVOLVE.md  HERMES_GAP_ANALYSIS.md  HTTP-API.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  SECRET_ROTATION.md
docs/plans/: v0.2-embed-and-evolve.md  v0.3-cli-entrypoint.md  v0.4-cloud-multi-tenant.md  v0.5-tenant-evolve-recall.md
infra/: README.md  app.py  cdk.json  lite_horse_stack.py  migrate-network.json  requirements.txt
src/hermes_lite/: __init__.py  cli.py  config.py  constants.py
src/lite_horse/: __init__.py  _debug_cli.py  alembic.ini  api.py  cli.py  config.py  constants.py  curator.py  effective.py  local_prompt.py
tests/: conftest.py  test_agent_factory.py  test_api.py  test_api_streaming.py  test_budget_hook.py  test_consolidator.py  test_core_session_key.py  test_cron_delivery.py  test_cron_jobs.py  test_cron_manage_tool.py  test_cron_scheduler.py  test_errors.py  test_evolution_hook.py  test_evolve_constraints.py  test_evolve_e2e.py  test_gateway_guard.py  test_gateway_runner.py  test_gateway_session_key.py  test_gepa_eval_set.py  test_gepa_fitness.py  test_gepa_local.py  test_gepa_population.py  test_gepa_runner.py  test_instructions_assembly.py  test_mcp_pool.py  test_memory_search_tool.py  test_memory_store.py  test_recall_local.py  test_session_db_fts5.py  test_skill_activation.py  test_skill_manage_tool.py  test_skill_view_tool.py  test_skills_stats.py  test_summarizer.py
tests/agent/: test_curator_consolidate.py  test_evolution_feedback_gate.py  test_layered_instructions.py  test_outcome_classifier.py  test_session_summary_injection.py
tests/cli/: conftest.py  test_agent_cmd.py  test_app_dispatch.py  test_async.py  test_attachments.py  test_cli_byte_parity.py  test_completion.py  test_config_cmd.py  test_cron_cmd.py  test_cron_scheduler_subprocess.py  test_debug_share.py  test_doctor.py  test_exit_codes.py  test_help_fast_path.py  test_import_isolation.py  test_keybinds.py  test_logging_bootstrap.py  test_logs_cmd.py  test_loop_ctrl_c.py  test_loop_one_shot.py  test_memory_cmd.py  test_memory_compact.py  test_output_helpers.py  test_permission_gate.py  test_picker.py  test_renderer.py  test_repl_smoke.py  test_sessions_cmd.py  test_settings.py  test_signals.py  test_skills_cmd.py  test_skills_evolve_population.py  test_slash.py  test_slash_handlers_cron_memory_skills.py  test_slash_handlers_phase28.py  test_slash_handlers_phase29.py  test_slash_handlers_session_model_tools.py  test_slash_logs.py  test_stream_buf.py  test_tool_ui.py  (+3 more)
tests/e2e/: test_chat_roundtrip.py
tests/lint/: test_api_purity.py  test_cli_parity.py  test_no_litehorse_home_in_tools.py  test_no_raw_sql_outside_repos.py  test_storage_import_boundary.py
tests/load/: locustfile.py
tests/models/: test_agents_migration_static.py  test_curator_migration_static.py  test_migration_roundtrip.py  test_migration_static.py  test_models.py  test_pgvector_migration_static.py  test_phase41_migration_static.py  test_phase42_migration_static.py  test_phase43_migration_static.py  test_phase44_migration_static.py  test_phase45_migration_static.py  test_session_summaries_migration_static.py  test_skill_promotion_migration_static.py
tests/observability/: test_logs.py  test_metrics.py  test_middleware.py  test_tracing.py
tests/providers/: test_chunker.py  test_embedding_select.py  test_openai_compat.py  test_pricing.py  test_registry.py
tests/repositories/: conftest.py  test_byo_repo.py  test_command_repo.py  test_cron_repo.py  test_fts_parity.py  test_instruction_repo.py  test_layered_resolution.py  test_mcp_repo.py  test_memory_repo.py  test_message_repo.py  test_opt_out_repo.py  test_session_repo.py  test_skill_repo.py  test_usage_repo.py
(+336 files in other folders)
