[project]
name = "lite-horse"
version = "0.2.0"
description = "Embeddable OpenAI-only assistant runtime built on the OpenAI Agents SDK"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "openai-agents>=0.14.1,<0.15",
    "openai>=2.0,<3",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.4",
    "types-pyyaml>=6.0",
]

[project.scripts]
litehorse-debug = "lite_horse._debug_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lite_horse"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["lite_horse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
