[project]
name = "lite-horse"
version = "0.2.0"
description = "Embeddable OpenAI-only assistant runtime built on the OpenAI Agents SDK"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "openai-agents>=0.14.1,<0.15",
    "openai>=2.0,<3",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "typer>=0.12,<1.0",
    "click-default-group>=1.2.2,<2",
    "pydantic-settings>=2.2,<3",
    "prompt_toolkit>=3.0.47,<4",
    "rich>=13.7,<15",
    # v0.4 cloud backend
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2",
    "aiobotocore>=2.13,<3",
    "aioboto3>=13,<15",
    "redis[hiredis]>=5.0,<6",
    "aws-secretsmanager-caching>=1.1,<2",
    "aws-encryption-sdk>=4.0,<5",
    "cryptography>=42,<46",
    "python-jose[cryptography]>=3.3,<4",
    "structlog>=24,<26",
    "opentelemetry-distro>=0.46,<1",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "anthropic>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.4",
    "types-pyyaml>=6.0",
    "pexpect>=4.9,<5",
    # v0.4 integration testing
    "moto[s3,secretsmanager,kms,sqs]>=5,<6",
    "respx>=0.21",
    "testcontainers>=4,<5",
]

[project.scripts]
litehorse = "lite_horse.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lite_horse"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# CLI command bodies defer heavy imports to satisfy the --help fast-path
# contract (see docs/plans/v0.3-cli-entrypoint.md). PLC0415 forbids
# function-level imports; waive it only inside the cli/ tree.
"src/lite_horse/cli/**/*.py" = ["PLC0415"]
# Tests frequently stub classes inline and use lazy imports so that a
# skipped test doesn't import heavy modules.
"tests/**/*.py" = ["PLC0415", "RUF012"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["lite_horse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that spawn subprocesses or otherwise take noticeably longer; opt in with -m slow",
]
